CONFIG - under the current guidance from ops, we need to log to stdout in order to benefit from mesos logging

--- a/configs/sample-cetera.conf
+++ b/configs/sample-cetera.conf
@@ -2,10 +2,10 @@ com.socrata {
   cetera.port = 5704
 
   log4j {
-    rootLogger = [ INFO, console ]
+    rootLogger = [ INFO, stdout ]
     appender {
-      console.class = org.apache.log4j.ConsoleAppender
-      console.props {
+      stdout.class = org.apache.log4j.ConsoleAppender
+      stdout.props {
         layout.class = org.apache.log4j.PatternLayout
         layout.props {
           ConversionPattern = "[%t] [%X{requestId}] %p %c{1} %d %m%n"
