--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -14,4 +14,10 @@ com.socrata {
 
   log4j {
   }
+
+  elasticsearch {
+    es_server = "127.0.0.1"
+    es_port = 9300
+    es_cluster_name = "catalog"
+  }
 }
