--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,11 @@ dist/*
 target/
 lib_managed/
 src_managed/
+
 project/boot/
 project/plugins/project/
+project/project/
+project/target/
 
 # Scala-IDE specific
 .scala_dependencies
