--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -16,8 +16,8 @@ com.socrata {
   }
 
   elasticsearch {
-    es_server = "127.0.0.1"
-    es_port = 9300
-    es_cluster_name = "catalog"
+    es-server = "127.0.0.1"
+    es-port = 9300
+    es-cluster_name = "catalog"
   }
 }
