Fixing broken field name in reference.conf

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -18,6 +18,6 @@ com.socrata {
   elasticsearch {
     es-server = "127.0.0.1"
     es-port = 9300
-    es-cluster_name = "catalog"
+    es-cluster-name = "catalog"
   }
 }
