--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ project/plugins/project/
 project/project/
 project/target/
 
+# detritus from ES
+data/
+
 # Scala-IDE specific
 .scala_dependencies
 .worksheet
