show customer categories, tags, metadata by domain
drill-in to metadata values
rearrange config defaults
refactor field types and traits

Conflicts:
	src/main/scala/com/socrata/cetera/handlers/Router.scala
	src/main/scala/com/socrata/cetera/search/EnrichedFieldTypesForES.scala
	src/main/scala/com/socrata/cetera/types/FieldTypes.scala

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -13,11 +13,22 @@ com.socrata {
   }
 
   log4j {
+    rootLogger = [ INFO, stdout ]
+    appender {
+      stdout.class = org.apache.log4j.ConsoleAppender
+      stdout.props {
+        layout.class = org.apache.log4j.PatternLayout
+        layout.props {
+          ConversionPattern = "[%t] [%X{requestId}] %p %c{1} %d %m%n"
+        }
+      }
+    }
   }
 
   elasticsearch {
     es-server = "127.0.0.1"
     es-port = 9300
     es-cluster-name = "catalog"
+    use-custom-ranker = false
   }
 }
