Update ES config to reflect latest optimal params
The main motivation for this PR is to ensure that we are by default
using our best performing parameters in terms of relevance. To ensure
that we can continue experimentation, we always honor parameters passed
in with the query, but use current best parameters as defaults.

- added new default config values for `minimum_should_match` and title
  boost parameters as they produce most relevant results
- removed useCustomRanker cruft
- updated buildBaseRequest to use best defaults

Reviewed-by: marc.millstone@socrata.com

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -29,6 +29,7 @@ com.socrata {
     es-server = "127.0.0.1"
     es-port = 9300
     es-cluster-name = "catalog"
-    use-custom-ranker = false
+    min-should-match = "3<60%"
+    title-boost = 5.0
   }
 }
