Wire up function score scripts from Cetera app configs

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -31,5 +31,6 @@ com.socrata {
     es-cluster-name = "catalog"
     min-should-match = "3<60%"
     title-boost = 5.0
+    function-score-scripts = ["views", "score"]
   }
 }
