Initial support for boosting based on datatype
- added a unit test and increased test coverage by more than 10%
- did some restructuring of code to make unit testing possible

Paired-with: john.krah@socrata.com

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -32,5 +32,9 @@ com.socrata {
     min-should-match = "3<60%"
     title-boost = 5.0
     function-score-scripts = ["views", "score"]
+    type-boosts = {
+      datasets = 10.0
+      datalenses = 5.0
+    }
   }
 }
