static mapping "datatype" (singular)
replaces es "_type" (plural) polymorphism

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -33,8 +33,8 @@ com.socrata {
     title-boost = 5.0
     function-score-scripts = ["views", "score"]
     type-boosts = {
-      datasets = 10.0
-      datalenses = 5.0
+      dataset = 10.0
+      datalens = 5.0
     }
   }
 }
