hmm... found an es bug

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -31,6 +31,9 @@ com.socrata {
     es-cluster-name = "catalog"
     min-should-match = "3<60%"
     title-boost = 5.0
-    function-score-scripts = ["views", "score"]
+    function-score-scripts = {
+      views = "1 + doc['page_views.page_views_total_log'].value"
+      score = "_score"
+    }
   }
 }
