EN-2367 Add balboa client for keeping metrics on search terms

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -25,6 +25,10 @@ com.socrata {
     }
   }
 
+  balboa {
+    data-directory = "/tmp/metrics"
+  }
+
   elasticsearch {
     es-server = "127.0.0.1"
     es-port = 9300
