config and bootstrap index

--- a/cetera-http/src/main/resources/reference.conf
+++ b/cetera-http/src/main/resources/reference.conf
@@ -33,6 +33,10 @@ com.socrata {
     es-server = "127.0.0.1"
     es-port = 9300
     es-cluster-name = "catalog"
+
+    index-alias-name = "catalog"
+    index-bootstrap-datetime-format-pattern = "yyyyMMddHHmm"
+
     min-should-match = "3<60%"
     title-boost = 5.0
     function-score-scripts = ["views", "score"]
