--- a/cetera-http/src/main/resources/esMappings.json
+++ b/cetera-http/src/main/resources/esMappings.json
@@ -28,6 +28,9 @@
           "type" : "string",
           "index": "not_analyzed"
         },
+        "is_public" : {
+          "type" : "boolean"
+        },
         "is_moderation_approved" : {
           "type" : "boolean"
         },
