docker artifact for cetera-http

--- a/cetera-http/docker/Dockerfile
+++ b/cetera-http/docker/Dockerfile
@@ -1,7 +1,7 @@
 FROM socrata/java8
 
 ENV CETERA_ROOT /srv/cetera/
-ENV CETERA_ARTIFACT cetera-assembly.jar
+ENV CETERA_ARTIFACT cetera-http-assembly.jar
 ENV CETERA_CONFIG /etc/cetera.conf
 
 RUN mkdir -p $CETERA_ROOT
