Add locked_down and api_locked_down fields to ES
Reviewed-by: jason.kroll

--- a/cetera-http/src/main/resources/esMappings.json
+++ b/cetera-http/src/main/resources/esMappings.json
@@ -316,6 +316,12 @@
         },
         "routing_approval_enabled" : {
           "type" : "boolean"
+        },
+        "locked_down" : {
+          "type" : "boolean"
+        },
+        "api_locked_down" : {
+          "type" : "boolean"
         }
       }
     }
