adjust cetera specific log level (#157)
Reviewed-by: Robert.Voyer

--- a/cetera-http/docker/Dockerfile
+++ b/cetera-http/docker/Dockerfile
@@ -3,6 +3,7 @@ FROM socrata/java8
 ENV CETERA_ROOT /srv/cetera/
 ENV CETERA_ARTIFACT cetera-http-assembly.jar
 ENV CETERA_CONFIG /etc/cetera.conf
+ENV LOG_LEVEL_CETERA_SPECIFIC INFO
 
 RUN mkdir -p $CETERA_ROOT
 
