--- a/configs/sample-cetera.conf
+++ b/configs/sample-cetera.conf
@@ -1,4 +1,13 @@
 com.socrata {
   cetera.port = 5704
   core.host = "127.0.0.1"
+
+  elasticsearch {
+    es-server = "localhost"
+    es-cluster-name = "elasticsearch"
+  }
+
+  log4j {
+    logger.com.socrata.cetera = DEBUG
+  }
 }
