--- a/cetera-http/src/main/resources/reference.conf
+++ b/cetera-http/src/main/resources/reference.conf
@@ -14,6 +14,7 @@ com.socrata {
 
   log4j {
     rootLogger = [ INFO, stdout ]
+    logger.com.socrata.cetera = INFO
     appender {
       stdout.class = org.apache.log4j.ConsoleAppender
       stdout.props {
