EN-6279 update mappings and settings to add users
The service (cetera) and the data provider (Rammstein, Tour-bus) agree
on a schema to share. It would be nice to store that in one file, but
today we keep it up to date manually. Some changes (esp. document)
already in effect but not synced to this repo until now.

Adding a new elasticsearch document type for users, along with
custom analyzers for screen name and email.

--- a/cetera-http/src/main/resources/esSettings.json
+++ b/cetera-http/src/main/resources/esSettings.json
@@ -3,21 +3,59 @@
     "index": {
       "analysis": {
         "filter": {
+          "email": {
+            "type": "pattern_capture",
+            "preserve_original": 0,
+            "patterns": [
+              "([^@]+)",
+              "(\\p{L}{2,})",
+              "(\\d+)",
+              "@(.{2,})"
+            ]
+          },
           "lowercase_en": {
             "type": "lowercase"
+          },
+          "stopwords": {
+            "type": "stop",
+            "stopwords": "_english_"
+          }
+        },
+        "tokenizer": {
+          "word": {
+            "type": "pattern",
+            "pattern": "[\\p{C}\\p{P}\\p{Sm}\\p{Sk}\\p{So}\\p{Z}&&[^\\&]]+",
+            "flags": "CASE_INSENSITIVE"
           }
         },
         "analyzer": {
-          "snowball_en": {
-            "type": "snowball",
-            "language": "English"
-          },
           "case_insensitive_en": {
             "type": "custom",
             "filter": [
               "lowercase_en"
             ],
             "tokenizer": "keyword"
+          },
+          "email": {
+            "tokenizer": "uax_url_email",
+            "filter": [
+              "email",
+              "lowercase_en",
+              "unique",
+              "stopwords"
+            ]
+          },
+          "screen_name": {
+            "tokenizer": "word",
+            "filter": [
+              "lowercase_en",
+              "unique",
+              "stopwords"
+            ]
+          },
+          "snowball_en": {
+            "type": "snowball",
+            "language": "English"
           }
         }
       },
