--- a/cetera-http/src/main/resources/esMappings.json
+++ b/cetera-http/src/main/resources/esMappings.json
@@ -4,6 +4,9 @@
       "_parent" : {
         "type" : "domain"
       },
+      "_routing" : {
+        "required" : true
+      },
       "properties" : {
         "fts_analyzed" : {
           "type": "string",
@@ -44,10 +47,12 @@
           "type" : "float"
         },
         "updated_at" : {
-            "type" : "date"
+          "type" : "date",
+          "format" : "dateOptionalTime"
         },
         "created_at" : {
-            "type" : "date"
+          "type" : "date",
+          "format" : "dateOptionalTime"
         },
         "page_views" : {
           "properties": {
@@ -78,7 +83,7 @@
               "copy_to": [ "fts_analyzed", "fts_raw" ],
               "fields" : {
                 "raw" : {"type" : "string", "index" : "not_analyzed"},
-                "analyzed" : {"type" : "string", "index" : "analyzed", "analyzer" : "snowball_en"}
+                "analyzed" : {"type" : "string", "analyzer" : "snowball_en"}
               }
             },
             "columns_name" : {
@@ -86,7 +91,7 @@
               "copy_to": [ "fts_analyzed", "fts_raw" ],
               "fields" : {
                 "raw" : {"type" : "string", "index" : "not_analyzed"},
-                "analyzed" : {"type" : "string", "index" : "analyzed", "analyzer" : "snowball_en"}
+                "analyzed" : {"type" : "string", "analyzer" : "snowball_en"}
               }
             },
             "columns_field_name" : {
@@ -94,7 +99,7 @@
               "copy_to": [ "fts_analyzed", "fts_raw" ],
               "fields" : {
                 "raw" : {"type" : "string", "index" : "not_analyzed"},
-                "analyzed" : {"type" : "string", "index" : "analyzed", "analyzer" : "snowball_en"}
+                "analyzed" : {"type" : "string", "analyzer" : "snowball_en"}
               }
             },
             "description" : {
@@ -102,7 +107,7 @@
               "copy_to": [ "fts_analyzed", "fts_raw" ],
               "fields" : {
                 "raw" : {"type" : "string", "index" : "not_analyzed"},
-                "analyzed" : {"type" : "string", "index" : "analyzed", "analyzer" : "snowball_en"}
+                "analyzed" : {"type" : "string", "analyzer" : "snowball_en"}
               }
             },
             "name" : {
@@ -110,7 +115,7 @@
               "copy_to": [ "fts_analyzed", "fts_raw" ],
               "fields" : {
                 "raw" : {"type" : "string", "index" : "not_analyzed"},
-                "analyzed" : {"type" : "string", "index" : "analyzed", "analyzer" : "snowball_en"}
+                "analyzed" : {"type" : "string", "analyzer" : "snowball_en"}
               }
             }
           },
@@ -146,10 +151,12 @@
               "type" : "string"
             },
             "updatedAt" : {
-              "type" : "date"
+              "type" : "date",
+              "format" : "dateOptionalTime"
             },
             "createdAt" : {
-              "type" : "date"
+              "type" : "date",
+              "format" : "dateOptionalTime"
             },
             "type" : {
               "type" : "string"
@@ -162,7 +169,7 @@
               "copy_to": [ "fts_analyzed", "fts_raw" ],
               "fields" : {
                 "raw" : {"type" : "string", "index" : "not_analyzed"},
-                "analyzed" : {"type" : "string", "index" : "analyzed", "analyzer" : "snowball_en"}
+                "analyzed" : {"type" : "string", "analyzer" : "snowball_en"}
               }
             },
             "columns_name" : {
@@ -170,7 +177,7 @@
               "copy_to": [ "fts_analyzed", "fts_raw" ],
               "fields" : {
                 "raw" : {"type" : "string", "index" : "not_analyzed"},
-                "analyzed" : {"type" : "string", "index" : "analyzed", "analyzer" : "snowball_en"}
+                "analyzed" : {"type" : "string", "analyzer" : "snowball_en"}
               }
             },
             "columns_field_name" : {
@@ -178,7 +185,7 @@
               "copy_to": [ "fts_analyzed", "fts_raw" ],
               "fields" : {
                 "raw" : {"type" : "string", "index" : "not_analyzed"},
-                "analyzed" : {"type" : "string", "index" : "analyzed", "analyzer" : "snowball_en"}
+                "analyzed" : {"type" : "string", "analyzer" : "snowball_en"}
               }
             }
           }
@@ -204,11 +211,11 @@
                   "analyzer": "case_insensitive_en",
                   "copy_to": [ "fts_analyzed", "fts_raw" ],
                   "fields" : {
-                    "raw" : {"type" : "string", "store" : "yes", "index" : "not_analyzed"},
-                    "analyzed" : {"type" : "string", "index" : "analyzed", "analyzer" : "snowball_en"}
+                    "raw" : {"type" : "string", "index" : "not_analyzed", "store" : true},
+                    "analyzed" : {"type" : "string", "analyzer" : "snowball_en"}
                   }
                 },
-                "score" : {"type" : "float", "store" : "no", "index" : "not_analyzed"}
+                "score" : {"type" : "float"}
               }
             },
             "tags" : {
@@ -219,11 +226,11 @@
                   "analyzer": "case_insensitive_en",
                   "copy_to": [ "fts_analyzed", "fts_raw" ],
                   "fields" : {
-                    "raw" : {"type" : "string", "store" : "yes", "index" : "not_analyzed"},
-                    "analyzed" : {"type" : "string", "index" : "analyzed", "analyzer" : "snowball_en"}
+                    "raw" : {"type" : "string", "index" : "not_analyzed", "store" : true},
+                    "analyzed" : {"type" : "string", "analyzer" : "snowball_en"}
                   }
                 },
-                "score" : {"type" : "float", "store" : "no", "index" : "not_analyzed"}
+                "score" : {"type" : "float"}
               }
             }
           }
@@ -234,7 +241,7 @@
           "copy_to": [ "fts_analyzed", "fts_raw" ],
           "fields": {
             "raw" : {"type" : "string", "index" : "not_analyzed"},
-            "analyzed" : {"type" : "string", "index" : "analyzed", "analyzer" : "snowball_en"}
+            "analyzed" : {"type" : "string", "analyzer" : "snowball_en"}
           }
         },
         "customer_category" : {
@@ -243,7 +250,7 @@
           "copy_to": [ "fts_analyzed", "fts_raw" ],
           "fields" : {
             "raw" : {"type" : "string", "index" : "not_analyzed"},
-            "analyzed" : {"type" : "string", "index" : "analyzed", "analyzer" : "snowball_en"}
+            "analyzed" : {"type" : "string", "analyzer" : "snowball_en"}
           }
         },
         "customer_metadata_flattened" : {
@@ -253,16 +260,16 @@
               "type" : "string",
               "copy_to": [ "fts_analyzed", "fts_raw" ],
               "fields" : {
-                "raw" : {"type" : "string", "store" : "yes", "index" : "not_analyzed"},
-                "analyzed" : {"type" : "string", "index" : "analyzed", "analyzer" : "snowball_en"}
+                "raw" : {"type" : "string", "index" : "not_analyzed", "store" : true},
+                "analyzed" : {"type" : "string", "analyzer" : "snowball_en"}
               }
             },
             "value" : {
               "type" : "string",
               "copy_to": [ "fts_analyzed", "fts_raw" ],
               "fields" : {
-                "raw" : {"type" : "string", "store" : "yes", "index" : "not_analyzed"},
-                "analyzed" : {"type" : "string", "index" : "analyzed", "analyzer" : "snowball_en"}
+                "raw" : {"type" : "string", "index" : "not_analyzed", "store" : true},
+                "analyzed" : {"type" : "string", "analyzer" : "snowball_en"}
               }
             }
           }
@@ -275,14 +282,16 @@
             },
             "screen_name": {
               "type": "string",
-              "analyzer": "case_insensitive_en",
+              "analyzer": "screen_name",
               "fields": {
-                "analyzed": { "type": "string", "analyzer": "snowball_en" },
                 "raw": { "type": "string", "index": "not_analyzed" }
-              },
-              "copy_to": [ "fts_analyzed", "fts_raw" ]
+              }
             }
           }
+        },
+        "shared_to" : {
+          "type" : "string",
+          "index" : "not_analyzed"
         }
       }
     },
@@ -339,6 +348,53 @@
         },
         "api_locked_down" : {
           "type" : "boolean"
+        }
+      }
+    },
+    "user" : {
+      "properties" : {
+        "id" : {
+          "type" : "string",
+          "index" : "not_analyzed"
+        },
+        "screen_name" : {
+          "type" : "string",
+          "analyzer" : "screen_name",
+          "fields" : {
+            "raw" : { "type" : "string", "index" : "not_analyzed" }
+          }
+        },
+        "email" : {
+          "type" : "string",
+          "analyzer" : "email",
+          "fields" : {
+            "raw" : { "type" : "string", "index" : "not_analyzed" }
+          }
+        },
+        "roles" : {
+          "type" : "nested",
+          "properties" : {
+            "domain_id" : {
+              "type" : "long",
+              "index" : "not_analyzed"
+            },
+            "role_name" : {
+              "type" : "string",
+              "index" : "not_analyzed"
+            }
+          }
+        },
+        "profile_image_url_large" : {
+          "type" : "string",
+          "index" : "no"
+        },
+        "profile_image_url_medium" : {
+          "type" : "string",
+          "index" : "no"
+        },
+        "profile_image_url_small" : {
+          "type" : "string",
+          "index" : "no"
         }
       }
     }
