Filter out unpublished data (#159)
reviewed-by: john.krah@socrata.com

--- a/cetera-http/src/main/resources/esMappings.json
+++ b/cetera-http/src/main/resources/esMappings.json
@@ -34,6 +34,9 @@
         "is_public" : {
           "type" : "boolean"
         },
+        "is_published" : {
+          "type" : "boolean"
+        },
         "is_moderation_approved" : {
           "type" : "boolean"
         },
