Make attribution searchable and include a Cetera response (#165)
This changeset makes the attribution field searchable via the new attributed_to query parameters and adds the attribution field to the resource field so that it is included in the response.

Reviewed-by: ayn.leslie, jason.kroll, john.krah

--- a/cetera-http/src/main/resources/esMappings.json
+++ b/cetera-http/src/main/resources/esMappings.json
@@ -185,7 +185,8 @@
               }
             },
             "type": { "type": "string", "index": "not_analyzed" },
-            "updatedAt": { "type": "date", "format": "dateOptionalTime" }
+            "updatedAt": { "type": "date", "format": "dateOptionalTime" },
+            "attribution": { "type": "string", "index": "no" }
           }
         },
         "socrata_id": {
@@ -212,6 +213,14 @@
               }
             }
           }
+        },
+        "attribution": {
+          "type": "string",
+          "analyzer": "case_insensitive_en",
+          "fields": {
+            "raw": { "type": "string", "index": "not_analyzed" }
+          },
+          "copy_to": [ "fts_analyzed", "fts_raw" ]
         }
       }
     },
