--- a/cetera-http/src/main/resources/mapping_document.json
+++ b/cetera-http/src/main/resources/mapping_document.json
@@ -145,11 +145,13 @@
       "type": "nested",
       "enabled": false,
       "properties": {
+        "attribution": { "type": "string", "index": "no" },
         "columns_description": { "type": "string", "index": "no"},
         "columns_field_name": { "type": "string", "index": "no" },
         "columns_name": { "type": "string", "index": "no" },
         "createdAt": { "type": "date", "format": "dateOptionalTime" },
         "description": { "type": "string", "index": "no" },
+        "download_count": { "type": "long" },
         "id": { "type": "string", "index": "no" },
         "name": { "type": "string", "index": "no" },
         "nbe_fxf": { "type": "string", "index": "no" },
@@ -163,8 +165,7 @@
           }
         },
         "type": { "type": "string", "index": "no" },
-        "updatedAt": { "type": "date", "format": "dateOptionalTime" },
-        "attribution": { "type": "string", "index": "no" }
+        "updatedAt": { "type": "date", "format": "dateOptionalTime" }
       }
     },
     "socrata_id": {
@@ -197,6 +198,7 @@
         "raw": { "type": "string", "index": "not_analyzed" }
       },
       "copy_to": [ "fts_analyzed", "fts_raw" ]
-    }
+    },
+    "preview_image_id": { "type": "string", "index": "no" }
   }
 }
