EN-8552 Tweak Readme (#203)
reviewed-by: robert.voyer@socrata.com

--- a/configs/sample-cetera.conf
+++ b/configs/sample-cetera.conf
@@ -4,7 +4,7 @@ com.socrata {
 
   elasticsearch {
     es-server = "localhost"
-    es-cluster-name = "elasticsearch"
+    es-cluster-name = "catalog"
   }
 
   log4j {
