Teach cetera about unmigrated_nbe_enabled and add it to mapping

--- a/cetera-http/src/main/resources/mapping_domain.json
+++ b/cetera-http/src/main/resources/mapping_domain.json
@@ -17,6 +17,7 @@
     "is_customer_domain": { "type": "boolean" },
     "moderation_enabled": { "type": "boolean" },
     "routing_approval_enabled": { "type": "boolean" },
+    "unmigrated_nbe_enabled": { "type": "boolean" },
     "locked_down": { "type": "boolean" },
     "api_locked_down": { "type": "boolean" },
     "organization": {
