--- a/cetera-http/src/main/resources/mapping_document.json
+++ b/cetera-http/src/main/resources/mapping_document.json
@@ -172,7 +172,9 @@
       "properties": {
         "dataset_id": { "type": "string", "index": "not_analyzed" },
         "parent_dataset_id": { "type": "string", "index": "not_analyzed" },
-        "domain_id": { "type": "long" }
+        "domain_id": { "type": "long" },
+        "nbe_id": { "type": "string", "index": "not_analyzed" },
+        "obe_id": { "type": "string", "index": "not_analyzed" }
       }
     },
     "update_freq": { "type": "float" },
