EN-9692: Surface user flags. (#205)
Reviewed-by: robert.voyer

--- a/cetera-http/src/main/resources/mapping_user.json
+++ b/cetera-http/src/main/resources/mapping_user.json
@@ -32,6 +32,10 @@
         }
       }
     },
+    "flags": {
+      "type": "string",
+      "index": "not_analyzed"
+    },
     "profile_image_url_large": {
       "type": "string",
       "index": "no"
