--- a/cetera-http/src/main/resources/mapping_document.json
+++ b/cetera-http/src/main/resources/mapping_document.json
@@ -208,6 +208,8 @@
         "user_id": { "type": "string", "index": "not_analyzed" },
         "type": { "type": "string", "index": "not_analyzed" }
       }
-    }
+    },
+    "hide_from_catalog": { "type": "boolean" },
+    "hide_from_data_json": { "type": "boolean" }
   }
 }
