Add grants to the metadata
reviewed-by:ayn.leslie@socrata.com,robert.voyer@socrata.com

--- a/cetera-http/src/main/resources/mapping_document.json
+++ b/cetera-http/src/main/resources/mapping_document.json
@@ -201,6 +201,13 @@
       },
       "copy_to": [ "fts_analyzed", "fts_raw" ]
     },
-    "preview_image_id": { "type": "string", "index": "no" }
+    "preview_image_id": { "type": "string", "index": "no" } ,
+    "grants": {
+      "type": "nested",
+      "properties": {
+        "user_id": { "type": "string", "index": "not_analyzed" },
+        "type": { "type": "string", "index": "not_analyzed" }
+      }
+    }
   }
 }
