Make default config more sensible

--- a/configs/sample-cetera.conf
+++ b/configs/sample-cetera.conf
@@ -4,7 +4,7 @@ com.socrata {
 
   elasticsearch {
     es-server = "localhost"
-    es-cluster-name = "catalog"
+    es-cluster-name = "es_dev"
   }
 
   log4j {
