EN-10590: introduce 'approval_status' param (#227)
At this stage, it respects view moderation. R&A will be addressed in the following commit.
Also, we no longer force a search_context by using the x-socrata-host.

Reviewed-by: katie.vedder, robert.voyer

--- a/cetera-http/src/main/resources/mapping_document.json
+++ b/cetera-http/src/main/resources/mapping_document.json
@@ -143,7 +143,10 @@
     },
     "is_default_view": { "type": "boolean" },
     "is_moderation_approved": { "type": "boolean" },
-    "moderation_status": { "type": "string", "index": "not_analyzed" },
+    "moderation_status": {
+      "type": "string",
+      "index": "not_analyzed"
+    },
     "page_views": {
       "properties": {
         "page_views_last_month": { "type": "long" },
