--- a/cetera-http/src/main/resources/mapping_document.json
+++ b/cetera-http/src/main/resources/mapping_document.json
@@ -36,7 +36,11 @@
       }
     },
     "approving_domain_ids": { "type": "long" },
+    "pending_domain_ids": { "type": "long" },
+    "rejecting_domain_ids": { "type": "long" },
     "is_approved_by_parent_domain": { "type": "boolean" },
+    "is_pending_on_parent_domain": { "type": "boolean" },
+    "is_rejected_by_parent_domain": { "type": "boolean" },
     "created_at": { "type": "date", "format": "dateOptionalTime" },
     "customer_category": {
       "type": "string",
@@ -124,12 +128,22 @@
     },
     "is_public": { "type": "boolean" },
     "is_published": { "type": "boolean" },
+    "hide_from_catalog": { "type": "boolean"},
+    "hide_from_data_json": { "type": "boolean"},
     "shared_to": {
       "type": "string",
       "index": "not_analyzed"
     },
+    "grants": {
+      "type": "nested",
+      "properties": {
+        "user_id": { "type": "string", "index": "not_analyzed" },
+        "type": { "type": "string", "index": "not_analyzed" }
+      }
+    },
     "is_default_view": { "type": "boolean" },
     "is_moderation_approved": { "type": "boolean" },
+    "moderation_status": { "type": "string", "index": "not_analyzed" },
     "page_views": {
       "properties": {
         "page_views_last_month": { "type": "long" },
@@ -154,8 +168,6 @@
         "download_count": { "type": "long" },
         "id": { "type": "string", "index": "no" },
         "name": { "type": "string", "index": "no" },
-        "nbe_fxf": { "type": "string", "index": "no" },
-        "obe_fxf": { "type": "string", "index": "no" },
         "parent_fxf": { "type": "string", "index": "no" },
         "page_views": {
           "properties": {
@@ -164,6 +176,7 @@
             "page_views_total": { "type": "long" }
           }
         },
+        "provenance": { "type": "string", "index": "no" },
         "type": { "type": "string", "index": "no" },
         "updatedAt": { "type": "date", "format": "dateOptionalTime" }
       }
@@ -171,10 +184,10 @@
     "socrata_id": {
       "properties": {
         "dataset_id": { "type": "string", "index": "not_analyzed" },
-        "parent_dataset_id": { "type": "string", "index": "not_analyzed" },
-        "domain_id": { "type": "long" },
         "nbe_id": { "type": "string", "index": "not_analyzed" },
-        "obe_id": { "type": "string", "index": "not_analyzed" }
+        "obe_id": { "type": "string", "index": "not_analyzed" },
+        "parent_dataset_id": { "type": "string", "index": "not_analyzed" },
+        "domain_id": { "type": "long" }
       }
     },
     "update_freq": { "type": "float" },
@@ -201,15 +214,7 @@
       },
       "copy_to": [ "fts_analyzed", "fts_raw" ]
     },
-    "preview_image_id": { "type": "string", "index": "no" } ,
-    "grants": {
-      "type": "nested",
-      "properties": {
-        "user_id": { "type": "string", "index": "not_analyzed" },
-        "type": { "type": "string", "index": "not_analyzed" }
-      }
-    },
-    "hide_from_catalog": { "type": "boolean" },
-    "hide_from_data_json": { "type": "boolean" }
+    "preview_image_id": { "type": "string", "index": "no" },
+    "provenance": { "type": "string", "index": "not_analyzed" }
   }
 }
