EN-11601 Cetera: user search by email should not be case sensitive (#244)
This updates Cetera's user search service to downcase screennames and
email addresses when constructing the corresponding filters. This is
necessary because filters do not honor analyzers defined in the mapping.

There is a corresponding Rammstein PR for the mapping change (updating
the email and screename fields to use the lowercasing keyword analyzer
rather than no analyzer). (NB: the keyword analyzer is effectively a
no-op as it treats an entire field value as a single token.)

Reviewed-by: ayn.leslie

--- a/cetera-http/src/main/resources/mapping_user.json
+++ b/cetera-http/src/main/resources/mapping_user.json
@@ -9,14 +9,14 @@
       "type": "string",
       "analyzer": "screen_name",
       "fields": {
-        "raw": { "type": "string", "index": "not_analyzed" }
+        "raw": { "type": "string", "analyzer": "case_insensitive_en" }
       }
     },
     "email": {
       "type": "string",
       "analyzer": "email",
       "fields": {
-        "raw": { "type": "string", "index": "not_analyzed" }
+        "raw": { "type": "string", "analyzer": "case_insensitive_en" }
       }
     },
     "roles": {
