--- a/cetera-http/src/main/resources/mapping_document.json
+++ b/cetera-http/src/main/resources/mapping_document.json
@@ -253,6 +253,7 @@
       "copy_to": [ "fts_analyzed", "fts_raw" ]
     },
     "preview_image_id": { "type": "string", "index": "no" },
-    "provenance": { "type": "string", "index": "not_analyzed" }
+    "provenance": { "type": "string", "index": "not_analyzed" },
+    "license": { "type": "string", "index": "not_analyzed" }
   }
 }
